--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
+  "name": "mysqly",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "csv-parser": "^3.2.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3"
   },
-  "name": "mysqly",
-  "version": "1.0.0",
-  "type":"module",
-  "main": "app.js",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "en este se realizara una que pagina de registro que est conectada con my sqly // { //   \"dependencies\": { //     \"csv-parser\": \"^3.2.0\", //     \"express\": \"^5.1.0\", //     \"multer\": \"^2.0.2\", //     \"mysql2\": \"^3.14.3\" //   }, //   \"name\": \"mysqly\", //   \"version\": \"1.0.0\", //   \"type\":\"module\", //   \"main\": \"app.js\", //   \"devDependencies\": {}, //   \"scripts\": { //     \"test\": \"echo \\\"Error: no test specified\\\" && exit 1\" //   }, //   \"keywords\": [], //   \"author\": \"\", //   \"license\": \"ISC\", //   \"description\": \"\" // }",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/castillo5/proyect-register.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "bugs": {
+    "url": "https://github.com/castillo5/proyect-register/issues"
+  },
+  "homepage": "https://github.com/castillo5/proyect-register#readme"
 }
