--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon app.js",
+    "client": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3"
@@ -22,5 +28,10 @@
   "bugs": {
     "url": "https://github.com/castillo5/proyect-register/issues"
   },
-  "homepage": "https://github.com/castillo5/proyect-register#readme"
+  "homepage": "https://github.com/castillo5/proyect-register#readme",
+  "devDependencies": {
+    "concurrently": "^9.2.0",
+    "nodemon": "^3.1.10",
+    "vite": "^7.1.2"
+  }
 }
